--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<title>epok links</title>
 <h1>hello I am sand</h1>
 <h3>this is a small project through my github</h3>
 <h3>mostly links or forks from other users (names are with the links btw)</h3>
