--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <title>epok links</title>
 <h1>hello I am sand</h1>
 <h3>this is a small project through my github</h3>
