--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<html>
+<body>
+  
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <title>epok links</title>
 <h1>hello I am sand</h1>
@@ -5,3 +9,6 @@
 <h3>mostly links or forks from other users (names are with the links btw)</h3>
 <a href="https://icrazyblaze.github.io/Xash3D-Emscripten/xash.html#1024">half-life in the web from iCrazyBlaze</a> 
 <a href="https://wcpss.technology/more/">few games including fnaf 1-4</a> 
+
+</body>
+</html>
