--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 <h1>hello I am sand</h1>
 <h3>this is a small project through my github</h3>
 <h3>mostly links or forks from other users (names are with the links btw)</h3>
-<p> <a> href="https://icrazyblaze.github.io/Xash3D-Emscripten/xash.html#1024">half-life in the web from iCrazyBlaze</a> </p> 
-<p> <a> href="https://wcpss.technology/more/">few games including fnaf 1-4</a> </p> 
+<a> href="https://icrazyblaze.github.io/Xash3D-Emscripten/xash.html#1024">half-life in the web from iCrazyBlaze</a> 
+
+  <a> href="https://wcpss.technology/more/">few games including fnaf 1-4</a>
 
 </body>
 </html>
