--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
 <title>epok links</title>
 <h1>hello I am sand</h1>
 <h3>this is a small project through my github</h3>
+<h3>dont use this in school im not and dont want to be responsible if you get in trouble</h3>
 <h3>mostly links or forks from other users (names are with the links btw)</h3>
 <a href="https://icrazyblaze.github.io/Xash3D-Emscripten/xash.html#1024">half-life in the web from iCrazyBlaze</a> 
 
 <a href="https://wcpss.technology/more/">few games including fnaf 1-4</a>
+  <a href="https://schooladam.herokuapp.com/">vandium proxy works well with some sites</a>
+  <a href="https://womginx.arph.org/">womginx</a>
+  <a href="https://womgni.herokuapp.com/">womginx(might go offline will add another if it does)</a>
 
 </body>
 </html>
