--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <a href="https://schooladam.herokuapp.com/">vandium proxy works well with some sites</a>
   <a href="https://womginx.arph.org/">womginx</a>
   <a href="https://womgni.herokuapp.com/">womginx(might go offline will add another if it does)</a>
+  <a href="https://sandsweb.tk/mc15.html">minecraft</a>
+  <a href="https://archive.org/details/consolelivingroom">console living room</a>
+  <a href="https://archive.org/details/w95dboxlinux">windows 95 emu</a>
 
 </body>
 </html>
