--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <a href="https://womgni.herokuapp.com/">womginx(might go offline will add another if it does)</a>
   <a href="https://sandsweb.tk/mc15.html">minecraft</a>
   <a href="https://archive.org/details/consolelivingroom">console living room</a>
-  <a href="https://archive.org/details/w95dboxlinux">windows 95 emu</a>
+  <a href="https://archive.org/details/win95_in_dosbox">windows 95 emu(remember to set year to 1998 on the vm)</a>
+  <a href="https://archive.org/details/softwarelibrary_msdos>dos box games</a>
 
 </body>
 </html>
