--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <h3>this is a small project through my github</h3>
 <h3>dont use this in school im not and dont want to be responsible if you get in trouble</h3>
 <h3>mostly links or forks from other users (names are with the links btw)</h3>
+<h3>if some links get blocked try using vandium or womginx as i will find more links to bypass others</h3>
 <a href="https://icrazyblaze.github.io/Xash3D-Emscripten/xash.html#1024">half-life in the web from iCrazyBlaze</a> 
-
+<h3 </h3>
 <a href="https://wcpss.technology/more/">few games including fnaf 1-4</a>
   <h3>ㅤ</h3>
   <a href="https://schooladam.herokuapp.com/">vandium proxy works well with some sites</a>
