--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <a href="https://archive.org/details/win95_in_dosbox">windows 95 emu(remember to set year to 1998 on the vm)</a>
   <h3>ㅤ</h3>
   <a href="https://archive.org/details/softwarelibrary_msdos>dos box games</a>
+<h1>my emails are : sadiaz1550@gmail.com and salvador.diaz@student.nisdtx.org email me some sites i can add to here</h1>
 
 </body>
 </html>
