--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
   <h3>ㅤ</h3>
   <a href="https://archive.org/details/win95_in_dosbox">windows 95 emu(remember to set year to 1998 on the vm)</a>
   <h3>ㅤ</h3>
-  <a href="https://archive.org/details/softwarelibrary_msdos>dos box games</a>
-           <h3> </h3>
-           <a href="https://github.com/theunknownhumansand/epichpage">fork repo here</a>
+  <a href="https://archive.org/details/softwarelibrary_msdos">dos box games</a>
 
 </body>
 </html>
