Update and rename index.html to main.html

--- a/main.html
+++ b/main.html
@@ -30,6 +30,8 @@
   <a href="https://archive.org/details/softwarelibrary_msdos">dos box games</a>
   <h3> </h3>
   <a href="https://github.com/theunknownhumansand/epichpage">fork repo here</a>
+  <h3> </h3>
+  <a href="https://themodernmethod.org/">more games modern method</a>
 
 </body>
 </html>
