--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
   <h3> </h3>
   <a href="https://github.com/theunknownhumansand/epichpage">fork repo here</a>
   <h3> </h3>
-  <a href="https://themodernmethod.org/">more games modern method</a>
+  <a href="https://themodernmethod.org/">more games</a>
 
 </body>
 </html>
