--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
   <a href="https://github.com/theunknownhumansand/epichpage">fork repo here</a>
   <h3> </h3>
   <a href="https://themodernmethod.org/">more games</a>
+  <h3> </h3>
+  <a href="https://sites.google.com/site/thegamecompilation/">yet again more games</a>
 
 </body>
 </html>
