--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
   <a href="https://themodernmethod.org/">more games</a>
   <h3> </h3>
   <a href="https://sites.google.com/site/thegamecompilation/">yet again more games</a>
+  <h3> </h3>
+  <a href="https://mattheffnt.github.io/skin-packer/">skin packer from mattheffnt</a>
 
 </body>
 </html>
