--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
   <a href="https://sites.google.com/site/thegamecompilation/">yet again more games</a>
   <h3> </h3>
   <a href="https://mattheffnt.github.io/skin-packer/">skin packer from mattheffnt</a>
+  <h3> </h3>
+  <h3>more coming soon</h3>
 
 </body>
 </html>
