--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
   <h3> </h3>
   <a href="https://mattheffnt.github.io/skin-packer/">skin packer from mattheffnt</a>
   <h3> </h3>
+  <a href="https://gdcolon.com/%F0%9F%97%BF">epok school project</a>
+  <h3> </h3>
   <h3>more coming soon</h3>
 
 </body>
