--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
   <h3> </h3>
   <a href="https://gdcolon.com/%F0%9F%97%BF">epok school project</a>
   <h3> </h3>
-  <h3>more coming soon</h3>
+  <a href="https://unknwownssand.github.io/ilebosnotmine/">ileb os original creators on scratch</a>
+  <h3> </h3>
+  <a href="https://lingojam.com/uwu-ify">the uwu-ifyer</a>
+
 
 </body>
 </html>
