--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <a href="https://unknwownssand.github.io/ilebosnotmine/">ileb os original creators on scratch</a>
   <h3> </h3>
   <a href="https://lingojam.com/uwu-ify">the uwu-ifyer</a>
+  <h3>on a chromebook you should only have this tab open or it freezes along with you having to force restart</h3>
 
 
 </body>
