--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
   <h3>on a chromebook you should only have this tab open or it freezes along with you having to force restart</h3>
   <h3> </h3>
   <a href="https://lingojam.com/uwu-ify">the uwu-ifyer</a>
+  <h3> <h3>
+  <a href="https://libreddit.spike.codes/">libreddit</a>
 
 
 </body>
