--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <h3> </h3>
   <a href="https://wcpss.technology/more/">few games including fnaf 1-4</a>
   <h3> </h3>
+  <a href="https://coursesonline.tech/more/">another domain for the site above</a>
+  <h3> </h3>
   <a href="https://schooladam.herokuapp.com/">vandium proxy works well with some sites</a>
   <h3> </h3>
   <a href="https://womginx.arph.org/">womginx</a>
