--- a/ytbs.html
+++ b/ytbs.html
@@ -1,3 +1,10 @@
-<h1>these are youtube alternatives</h1>
+<h1>these are youtube alternatives and movie video stuff</h1>
 <h3> </h3>
 <h3>the one that is my favorite is called piped it is open source and works fine the link is below</h3>
+ <a href="https://piped.kavin.rocks/">piped</a>
+<h3> </h3>
+<h3>the next one that i know of is called INVIDIOUS</h3>
+ <a href="https://redirect.invidious.io/">INVIDIOUS instances</a>
+<h3> </h3>
+<h3>anime</h3>
+ <a href="https://animixplay.to/">animixplay</a>
