--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   <h3> <h3>
   <a href="https://libreddit.spike.codes/">libreddit</a>
   <h3> </h3>
+  <a href="https://sandsweb.tk/ytbs">youtube instances</a>
 
 
 </body>
