--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
   <h3> </h3>
   <a href="https://icrazyblaze.github.io/Xash3D-Emscripten/xash.html#1024">half-life in the web from iCrazyBlaze</a> 
   <h3> </h3>
-  <a href="https://wcpss.technology/more/">few games including fnaf 1-4</a>
-  <h3> </h3>
-  <a href="https://coursesonline.tech/more/">another domain for the site above</a>
+  <a href="https://coursesonline.tech/more/">few games including fnaf 1-4</a>
   <h3> </h3>
   <a href="https://schooladam.herokuapp.com/">vandium proxy works well with some sites</a>
   <h3> </h3>
