--- a/Index.html
+++ b/Index.html
@@ -2,5 +2,5 @@
    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   <p>hi this website is currently updating come back later</p>
+<div class="intro">hi this website is updating please come back later</>
 </body>
