--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,8 @@
+<html>
 <head>
    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="intro">hi this website is updating please come back later</>
 </body>
+</html>
