--- a/Index.html
+++ b/Index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-   <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="Styles.css">
 </head>
 <body>
-<div class="intro">hi this website is updating please come back later</>
+   <div class="intro">hi this website is updating please come back later</div>
 </body>
 </html>
