--- a/Index.html
+++ b/Index.html
@@ -1,8 +1,6 @@
+<!DOCTYPE html>
 <html>
-<head>
-   <link rel="stylesheet" href="Styles.css">
-</head>
-<body>
-   <div class="intro">hi this website is updating please come back later</div>
-</body>
-</html>
+   <body>
+      <h3>what ever it is your looking for its currently updating or has been shut down come back later</h3>
+      </body>
+   </html>
