--- a/games.html
+++ b/games.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Navigation bar test</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style2.css">
     </head>
     <body>
         <header>
