--- a/games.html
+++ b/games.html
@@ -9,7 +9,7 @@
            <img src="favicon.ico">
             <nav>
                 <ul>
-                    <li><a href="euuuuuuuuqfh8949999993w">Home</a></li>
+                    <li><a href="https://sandsweb.tk/">Home</a></li>
                     <li><a href="games">Games</a></li>
                     <li><a href="#">Pricing</a></li>
                     <li><a href="#">Terms of use</a></li>
