--- a/euuuuuuuuqfh8949999993w.html
+++ b/euuuuuuuuqfh8949999993w.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Navigation bar test</title>
+        <title>epok links v2</title>
         <link rel="stylesheet" href="style2.css">
     </head>
     <body>
