--- a/euuuuuuuuqfh8949999993w.html
+++ b/euuuuuuuuqfh8949999993w.html
@@ -18,7 +18,7 @@
             </nav>
         </header>
         <main>
-            <p>test</p>
+            <button onclick="window.location.href = 'https://google.com';"> test </button>
         </main>
     </body>
 </html>
