--- a/games.html
+++ b/games.html
@@ -19,6 +19,7 @@
         </header>
         <main>
             <button onclick="window.location.href = 'https://google.com';"> test </button>
+            <button onclick="window.location.href = 'https://youtube.com';"> test2 </button>
         </main>
     </body>
 </html>
