--- a/games.html
+++ b/games.html
@@ -17,8 +17,8 @@
             </nav>
         </header>
         <main>
-            <button onclick="window.location.href = 'https://google.com';"> test </button>
-            <button onclick="window.location.href = 'https://youtube.com';"> test2 </button>
+            <button onclick="window.location.href = 'https://icrazyblaze.github.io/Xash3D-Emscripten/xash.html#1024';"> half-life in the web from iCrazyBlaze </button>
+            <button onclick="window.location.href = 'https://coursesonline.tech/more/';"> few games including fnaf 1-4 </button>
         </main>
     </body>
 </html>
