--- a/games.html
+++ b/games.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Navigation bar test</title>
+        <title>epok links v2</title>
         <link rel="stylesheet" href="style2.css">
     </head>
     <body>
@@ -11,7 +11,7 @@
                 <ul>
                     <li><a href="https://sandsweb.tk/">Home</a></li>
                     <li><a href="games">Games</a></li>
-                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
