--- a/about.html
+++ b/about.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>epok links v2</title>
+        <link rel="stylesheet" href="style2.css">
+    </head>
+    <body>
+        <header>
+           <img src="favicon.ico">
+            <nav>
+                <ul>
+                    <li><a href="https://sandsweb.tk/">Home</a></li>
+                    <li><a href="games">Games</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <p>hi my name is Salvador Diaz(sand) i am the creator of this web site the, css code comes from a website on the homepage just to let you know i am a 12 year old 6th grader and update this on my free time</p>
+        </main>
+    </body>
+</html>
