--- a/euuuuuuuuqfh8949999993w.html
+++ b/euuuuuuuuqfh8949999993w.html
@@ -11,7 +11,7 @@
                 <ul>
                     <li><a href="https://sandsweb.tk/">Home</a></li>
                     <li><a href="games">Games</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="about">About</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
