--- a/games.html
+++ b/games.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>epok links v2</title>
+        <link href="https://allfont.net/allfont.css?fonts=pusab" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="style2.css">
     </head>
     <body>
