--- a/euuuuuuuuqfh8949999993w.html
+++ b/euuuuuuuuqfh8949999993w.html
@@ -17,7 +17,8 @@
             </nav>
         </header>
         <main>
-            <p>balls</p>
+            <p>hi welcome to this not very epok website</p>
+            <a href="https://codetheweb.blog/style-a-navigation-bar-css/">css source code</a>
         </main>
     </body>
 </html>
