--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    hello what your looking for is currently not here please come back later
+    update almost out
     <script src="script.js"></script>
   </body>
 </html>
