--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>epok links v2</title>
+        <link rel="stylesheet" href="style2.css">
+    </head>
+    <body>
+        <header>
+           <img src="favicon.ico">
+            <nav>
+                <ul>
+                    <li><a href="https://sandsweb.tk/">Home</a></li>
+                    <li><a href="games">Games</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="contact">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <p>my emails are salvador.diaz@student.nisdtx.org and sadiaz1550@gmail.com</p>
+        </main>
+    </body>
+</html>
