--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
             </nav>
         </header>
         <main>
-            <p>hi my name is Salvador Diaz(sand) i am the creator of this web site the, css code comes from a website on the homepage just to let you know i am a 12 year old 6th grader and update this on my free time</p>
+            <p>hi my name is Salvador Diaz(sand) i am the creator of this web site, the css code comes from a website on the homepage just to let you know i am a 12 year old 6th grader and update this on my free time</p>
         </main>
     </body>
 </html>
