--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
                 <ul>
                     <li><a href="https://sandsweb.tk/">Home</a></li>
                     <li><a href="games">Games</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="contact">Contact</a></li>
                 </ul>
             </nav>
         </header>
