--- a/ytbs.html
+++ b/ytbs.html
@@ -4,7 +4,7 @@
  <a href="https://piped.kavin.rocks/">piped</a>
 <h3> </h3>
 <h3>the next one that i know of is called INVIDIOUS</h3>
- <a href="https://redirect.invidious.io/">INVIDIOUS instances</a>
+ <a href="https://redirect.invidious.io/">INVIDIOUS instances(no longer works i think)</a>
 <h3> </h3>
 <h3>anime</h3>
  <a href="https://animixplay.to/">animixplay</a>
