--- a/euuuuuuuuqfh8949999993w.html
+++ b/euuuuuuuuqfh8949999993w.html
@@ -11,6 +11,7 @@
                 <ul>
                     <li><a href="https://sandsweb.tk/">Home</a></li>
                     <li><a href="games">Games</a></li>
+                    <li><a href="websites">websites</a></li>
                     <li><a href="about">About</a></li>
                     <li><a href="contact">Contact</a></li>
                 </ul>
