--- a/youtube.html
+++ b/youtube.html
@@ -1,4 +1,24 @@
-<h1>these are youtube alternatives and movie video stuff</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>epok links v2</title>
+        <link rel="stylesheet" href="style2.css">
+    </head>
+    <body>
+        <header>
+           <img src="favicon.ico">
+            <nav>
+                <ul>
+                    <li><a href="https://sandsweb.tk/">Home</a></li>
+                    <li><a href="games">Games</a></li>
+                    <li><a href="websites">websites</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="contact">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <h1>these are youtube alternatives and movie video stuff</h1>
 <h3> </h3>
 <h3>the one that is my favorite is called piped it is open source and works fine the link is below</h3>
  <a href="https://piped.kavin.rocks/">piped</a>
@@ -8,3 +28,6 @@
 <h3> </h3>
 <h3>anime</h3>
  <a href="https://animixplay.to/">animixplay</a>
+        </main>
+    </body>
+</html>
