--- a/games.html
+++ b/games.html
@@ -20,6 +20,12 @@
         <main>
             <button onclick="window.location.href = 'https://icrazyblaze.github.io/Xash3D-Emscripten/xash.html#1024';"> half-life in the web from iCrazyBlaze </button>
             <button onclick="window.location.href = 'https://coursesonline.tech/more/';"> few games including fnaf 1-4 </button>
+            <button onclick="window.location.href = 'https://sandsweb.tk/mc15.html';"> minecraft java in the web </button>
+            <button onclick="window.location.href = 'https://archive.org/details/consolelivingroom';"> console living room </button>
+            <button onclick="window.location.href = 'https://archive.org/details/softwarelibrary_msdos';"> dos box games </button>
+            <button onclick="window.location.href = 'https://themodernmethod.org/';"> modernmethod </button>
+            <button onclick="window.location.href = 'https://sites.google.com/site/thegamecompilation/';"> unblocked games world </button>
+            <button onclick="window.location.href = 'https://unknwownssand.github.io/ilebosnotmine/';"> ileb os original creators on scratch </button>
         </main>
     </body>
 </html>
