--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             </nav>
         </header>
         <main>
+            <h1>some one told the website to someone else so strike 1/5, email or tell me first<h1>
             <p>hi welcome to this not very epok website</p>
             <a href="https://codetheweb.blog/style-a-navigation-bar-css/">css source code</a>
             <a href="https://github.com/UNKNWOWNSSAND/epichpage">github source code</a>
