--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         </header>
         <main>
             <h1>some one told the website to someone else so strike 1/5, email or tell me first
-            <p>hi welcome to this not very epok website</p>
+            <p>hi welcome to this not very epok website,
+                do not use this in school i am not responsible if your computer gets restricted and if you get in trouble</p>
             <a href="https://codetheweb.blog/style-a-navigation-bar-css/">css source code</a>
             <a href="https://github.com/UNKNWOWNSSAND/epichpage">github source code</a> </h1>
         </main>
