--- a/secret.html
+++ b/secret.html
@@ -1,2 +1,25 @@
-<h1>gg you found the secret page</h1>
-<h3>now email me saying you found this with a screenshot</h3>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>epok links v2</title>
+        <link rel="stylesheet" href="style2.css">
+    </head>
+    <body>
+        <header>
+           <img src="favicon.ico">
+            <nav>
+                <ul>
+                    <li><a href="https://sandsweb.tk/">Home</a></li>
+                    <li><a href="games">Games</a></li>
+                    <li><a href="websites">websites</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="contact">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <h1>gg you found the secret page</h1>
+          <h3>now email me saying you found this with a screenshot</h3>
+        </main>
+    </body>
+</html>
