--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
             </nav>
         </header>
         <main>
-            <h1>some one told the website to someone else so strike 1/5, email or tell me first
+            <h1>can someone email me a good backround and top bar color?
             <p>hi welcome to this not very epok website,
                 do not use this in school i am not responsible if your computer gets restricted and if you get in trouble</p>
             <a href="https://codetheweb.blog/style-a-navigation-bar-css/">css source code</a>
             <a href="https://github.com/UNKNWOWNSSAND/epichpage">github source code</a> </h1>
+            
+            <p>
         </main>
     </body>
 </html>
