--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 do not use this in school i am not responsible if your computer gets restricted and if you get in trouble</p>
             <a href="https://codetheweb.blog/style-a-navigation-bar-css/">css source code</a>
             <a href="https://github.com/UNKNWOWNSSAND/epichpage">github source code</a> </h1>
+            <h1><p>thanks to Phoenix Dodge for the backround</p></h1>
             <p>
         </main>
     </body>
