--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/GaIIDBshqNk?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="0" height="0" src="http://www.youtuberepeater.com/watch?v=GaIIDBshqNk&s=0&e=243" frameborder="0" allow="autoplay;" allowfullscreen></iframe>
         <title>epok links v2</title>
         <link rel="stylesheet" href="style2.css">
     </head>
