--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <iframe width="0" height="0" src="http://www.youtuberepeater.com/watch?v=GaIIDBshqNk&s=0&e=243" frameborder="0" allow="autoplay;" allowfullscreen></iframe>
+        <iframe width="0" height="0" src="http://www.youtuberepeater.com/watch?v=GaIIDBshqNk&s=0&e=243" frameborder="0" allowfullscreen></iframe>
         <title>epok links v2</title>
         <link rel="stylesheet" href="style2.css">
     </head>
