--- a/websites.html
+++ b/websites.html
@@ -25,6 +25,7 @@
             <button onclick="window.location.href = 'https://unknwownssand.github.io/ilebosnotmine/';"> ileb os original creators on scratch </button>
             <button onclick="window.location.href = 'https://libreddit.spike.codes/';"> libreddit </button>
             <button onclick="window.location.href = 'https://sandsweb.tk/youtube';"> youtube instances </button>
+            <button onclick="window.location.href = 'https://windows96.net/';"> windows 96 </button>
         </main>
     </body>
 </html>
