--- a/games.html
+++ b/games.html
@@ -27,6 +27,7 @@
             <button onclick="window.location.href = 'https://sites.google.com/site/thegamecompilation/';"> unblocked games world </button>
             <button onclick="window.location.href = 'https://unknwownssand.github.io/ilebosnotmine/';"> ileb os original creators on scratch </button>
             <button onclick="window.location.href = 'https://windows96.net/system/apps/pumkin/';"> pumkin worl </button>
+            <button onclick="window.location.href = 'https://windows96.net/system/apps/gameing/';"> gameing </button>
         </main>
     </body>
 </html>
