--- a/secret.html
+++ b/secret.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>epok links v2</title>
-        <link rel="stylesheet" href="style2.css">
+        <link rel="stylesheet" href="secret.css">
     </head>
     <body>
         <header>
