--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1>you're all jerks im shuting it down now have fun :) oh and thank phoenix dodge and whatever the other bloodbrained humans name was</h1>
+<h1>its april first should i rebrand</h1>
