--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
            <img src="favicon.ico">
             <nav>
                 <ul>
-                    <li><a href="https://sandsweb.tk/">Home</a></li>
+                    <li><a href="https://unknownssand.tk/">Home</a></li>
                     <li><a href="games">Games</a></li>
                     <li><a href="websites">websites</a></li>
                     <li><a href="about">About</a></li>
