--- a/websites.html
+++ b/websites.html
@@ -9,7 +9,7 @@
            <img src="favicon.ico">
             <nav>
                 <ul>
-                    <li><a href="https://sandsweb.tk/">Home</a></li>
+                    <li><a href="https://unknownssand.tk/">Home</a></li>
                     <li><a href="games">Games</a></li>
                     <li><a href="websites">websites</a></li>
                     <li><a href="about">About</a></li>
@@ -24,7 +24,7 @@
             <button onclick="window.location.href = 'https://gdcolon.com/%F0%9F%97%BF';"> epok gdcolon site </button>
             <button onclick="window.location.href = 'https://unknwownssand.github.io/ilebosnotmine/';"> ileb os original creators on scratch </button>
             <button onclick="window.location.href = 'https://libreddit.spike.codes/';"> libreddit </button>
-            <button onclick="window.location.href = 'https://sandsweb.tk/youtube';"> youtube instances </button>
+            <button onclick="window.location.href = 'https://unknownssand.tk/youtube';"> youtube instances </button>
             <button onclick="window.location.href = 'https://windows96.net/';"> windows 96 </button>
         </main>
     </body>
