--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <iframe width="0" height="0" src="http://www.youtuberepeater.com/watch?v=GaIIDBshqNk&s=0&e=243" frameborder="0" allowfullscreen></iframe>
         <title>epok links v2</title>
         <link rel="stylesheet" href="style2.css">
     </head>
@@ -13,6 +12,7 @@
                     <li><a href="https://unknownssand.tk/">Home</a></li>
                     <li><a href="games">Games</a></li>
                     <li><a href="websites">websites</a></li>
+                    <li><a href="proxys">proxys</a></li>
                     <li><a href="about">About</a></li>
                     <li><a href="contact">Contact</a></li>
                 </ul>
@@ -22,7 +22,7 @@
             <h1>can someone email me a good backround and top bar color?
             <p>hi welcome to this not very epok website,
                 do not use this in school i am not responsible if your computer gets restricted and if you get in trouble</p>
-            <a href="https://codetheweb.blog/style-a-navigation-bar-css/">css source code</a>
+            <a href="https://codethaeweb.blog/style-a-navigation-bar-css/">css source code</a>
             <a href="https://github.com/UNKNWOWNSSAND/epichpage">github source code</a> </h1>
             <h1><p>my backround hehe</p></h1>
             <p>
