--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
                     <li><a href="https://sandsweb.tk/">Home</a></li>
                     <li><a href="games">Games</a></li>
                     <li><a href="websites">websites</a></li>
+                    <li><a href="proxys">proxys</a></li>
                     <li><a href="about">About</a></li>
                     <li><a href="contact">Contact</a></li>
                 </ul>
