--- a/proxys.html
+++ b/proxys.html
@@ -20,6 +20,14 @@
         </header>
         <main>
             <h1>this are proxy links do not share them through your school email and email sand@unknownssand.tk if one of the proxys go down</h1>
+            <a href="https://geometric-expression.net/">incognito</a>
+            <a href="https://physicalsalad.com/">ludicrous</a>
+            <a href="https://trustededu.xyz/">Resilience</a>
+            <a href="https://simplemathhelp.net/">simple unblocker</a>
+            <a href="https://centerkingdom.org/">ludicrous again</a>
+            <a href="https://moonrising.me/">incognito again</a>
+            <a href="https://obomna.com/">Fractical</a>
+            <a href="https://rm.prysmdev.org/#">rammerhead browser my favorite</a>
         </main>
     </body>
 </html>
