--- a/websites.html
+++ b/websites.html
@@ -27,6 +27,10 @@
             <button onclick="window.location.href = 'https://libreddit.spike.codes/';"> libreddit </button>
             <button onclick="window.location.href = 'https://unknownssand.tk/youtube';"> youtube instances </button>
             <button onclick="window.location.href = 'https://windows96.net/';"> windows 96 </button>
+            <button onclick="window.location.href = 'https://fakeyou.com/';"> fakeyou </button>
+            <button onclick="window.location.href = 'https://15.ai/';"> 15.ai </button>
+            <button onclick="window.location.href = 'https://tts.cyzon.us/';"> aeiou </button>
+            <button onclick="window.location.href = 'https://tetyys.com/SAPI4/';"> Online Microsoft TTS Generator </button>
         </main>
     </body>
 </html>
