--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
             </nav>
         </header>
         <main>
-            <p>hi my name is Salvador Diaz(sand) i am the creator of this web site, the css code comes from a website on the homepage just to let you know i am a 12 year old 6th grader and update this on my free time</p>
+            <p>hi my name is Salvador Diaz(sand) i am the creator of this web site, the css code comes from a website on the homepage just to let you know i am a 12 year old 6th grader and update this on my free time oh and my latest yt vid is above</p>
         </main>
     </body>
 </html>
