--- a/proxys.html
+++ b/proxys.html
@@ -20,6 +20,7 @@
         </header>
         <main>
             <h1>this are proxy links do not share them through your school email and email sand@unknownssand.tk if one of the proxys go down</h1>
+            <a href="https://schooladam.herokuapp.com/">vandium</a>
             <a href="https://geometric-expression.net/">incognito</a>
             <a href="https://physicalsalad.com/">ludicrous</a>
             <a href="https://trustededu.xyz/">Resilience</a>
