--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h1 style="color:red";>hello i have moved to a new website the link is down below</h1>
+<h1 style="color:red";>shutting down soon</h1>
 <a href="https://vgs12.neocities.org/">here is the website</a>
